--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -18,7 +18,7 @@ a.active,
 a:active,
 a:focus,
 a:hover {
-  color: #18BC9C;
+  color: #B6CDB1;
   outline: none; }
 
 h1,
@@ -30,7 +30,6 @@ h6 {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase; }
-
 hr.star-light,
 hr.star-primary {
   max-width: 250px;
@@ -55,15 +54,43 @@ hr.star-light {
 
 hr.star-light:after {
   color: white;
-  background-color: #18BC9C; }
+  background-color: #B6CDB1; }
 
 hr.star-primary {
-  border-color: #2C3E50; }
+  border-color: #2f6841; }
 
 hr.star-primary:after {
-  color: #2C3E50;
+  color: #2f6841;
   background-color: white; }
 
+/**/
+hr.more {
+  max-width: 250px;
+  margin: 25px auto 30px;
+  padding: 0;
+  text-align: center;
+  border: none;
+  border-top: solid 5px; }
+
+hr.more:after {
+  font-family: FontAwesome;
+  font-size: 2em;
+  position: relative; 
+  top: -.8em;
+  display: inline-block;
+  padding: 0 0.25em;
+  content: 'more';
+  background-color: #B6CDB1;
+}
+
+hr.left {
+  margin-right: 20px;
+}
+
+hr.right {
+  margin-left: 20px;
+}
+/**/
 .img-centered {
   margin: 0 auto; }
 
@@ -75,7 +102,7 @@ section {
 
 section.success {
   color: white;
-  background: #18BC9C; }
+  background: #B6CDB1; }
 
 @media (max-width: 767px) {
   section {
@@ -105,7 +132,7 @@ section.success {
   font-weight: 700;
   text-transform: uppercase;
   border: none;
-  background: #2C3E50; }
+  background: #2f6841; }
   #mainNav a:focus {
     outline: none; }
   #mainNav .navbar-brand {
@@ -118,7 +145,7 @@ section.success {
     #mainNav .navbar-nav li.nav-item a.nav-link {
       color: white; }
       #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-        color: #18BC9C;
+        color: #B6CDB1;
         outline: none; }
       #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
         color: white; }
@@ -130,8 +157,8 @@ section.success {
     border-color: white; }
     #mainNav .navbar-toggler:focus, #mainNav .navbar-toggler:hover {
       color: white;
-      border-color: #18BC9C;
-      background-color: #18BC9C; }
+      border-color: #B6CDB1;
+      background-color: #B6CDB1; }
 
 @media (min-width: 992px) {
   #mainNav {
@@ -148,10 +175,10 @@ section.success {
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
       color: white;
       border-radius: 3px;
-      background: #18BC9C; }
+      background: #B6CDB1; }
       #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
         color: white;
-        background: #18BC9C; }
+        background: #B6CDB1; }
   #mainNav.navbar-shrink {
     padding-top: 10px;
     padding-bottom: 10px; }
@@ -163,7 +190,7 @@ header.masthead {
   padding-bottom: 50px;
   text-align: center;
   color: white;
-  background: #18BC9C; }
+  background: #B6CDB1; }
   header.masthead img {
     display: block;
     margin: 0 auto 20px; }
@@ -271,7 +298,7 @@ header.masthead {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
-    background-color: #2C3E50; }
+    background-color: #2f6841; }
     .portfolio-modal .close-modal .lr .rl {
       /* Safari and Chrome */
       z-index: 1052;
@@ -281,7 +308,7 @@ header.masthead {
       -webkit-transform: rotate(90deg);
       -ms-transform: rotate(90deg);
       transform: rotate(90deg);
-      background-color: #2C3E50; }
+      background-color: #2f6841; }
 
 .portfolio-modal .modal-backdrop {
   display: none;
@@ -328,7 +355,7 @@ header.masthead {
   opacity: 1; }
 
 .floating-label-form-group-with-focus label {
-  color: #18BC9C; }
+  color: #B6CDB1; }
 
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee; }
@@ -339,12 +366,12 @@ footer {
     margin-bottom: 30px; }
   footer .footer-above {
     padding-top: 50px;
-    background-color: #2C3E50; }
+    background-color: #2f6841; }
   footer .footer-col {
     margin-bottom: 50px; }
   footer .footer-below {
     padding: 25px 0;
-    background-color: #2c3e50; }
+    background-color: #2f6841; }
 
 .btn-outline {
   font-size: 20px;
@@ -354,15 +381,15 @@ footer {
   border: solid 2px white;
   background: transparent; }
   .btn-outline.active, .btn-outline:active, .btn-outline:focus, .btn-outline:hover {
-    color: #18BC9C;
+    color: #B6CDB1;
     border: solid 2px white;
     background: white; }
 
 .btn-primary {
   font-weight: 700;
   color: white;
-  border-color: #2C3E50;
-  background-color: #2C3E50; }
+  border-color: #2f6841;
+  background-color: #2f6841; }
   .btn-primary.focus, .btn-primary:focus {
     color: white;
     border-color: black;
@@ -390,17 +417,17 @@ footer {
   fieldset[disabled] .btn-primary.focus,
   fieldset[disabled] .btn-primary:focus,
   fieldset[disabled] .btn-primary:hover {
-    border-color: #2C3E50;
-    background-color: #2C3E50; }
+    border-color: #2f6841;
+    background-color: #2f6841; }
   .btn-primary .badge {
-    color: #2C3E50;
+    color: #2f6841;
     background-color: white; }
 
 .btn-success {
   font-weight: 700;
   color: white;
-  border-color: #18BC9C;
-  background-color: #18BC9C; }
+  border-color: #B6CDB1;
+  background-color: #B6CDB1; }
   .btn-success.focus, .btn-success:focus {
     color: white;
     border-color: #0a4b3e;
@@ -428,10 +455,10 @@ footer {
   fieldset[disabled] .btn-success.focus,
   fieldset[disabled] .btn-success:focus,
   fieldset[disabled] .btn-success:hover {
-    border-color: #18BC9C;
-    background-color: #18BC9C; }
+    border-color: #B6CDB1;
+    background-color: #B6CDB1; }
   .btn-success .badge {
-    color: #18BC9C;
+    color: #B6CDB1;
     background-color: white; }
 
 .btn-social {
