--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -238,7 +238,7 @@ header.masthead {
       -moz-transition: all ease 0.5s;
       transition: all ease 0.5s;
       opacity: 0;
-      background: rgba(24, 188, 156, 0.9); }
+      background: rgba(47, 104, 65, 0.75); }
       #portfolio .portfolio-item .portfolio-link .caption:hover {
         opacity: 1; }
       #portfolio .portfolio-item .portfolio-link .caption .caption-content {
@@ -438,12 +438,12 @@ footer {
   background-color: #B6CDB1; }
   .btn-success.focus, .btn-success:focus {
     color: white;
-    border-color: #0a4b3e;
-    background-color: #128f76; }
+    border-color: white;
+    background-color: #67dd64; }
   .btn-success:hover {
-    color: white;
-    border-color: #11866f;
-    background-color: #128f76; }
+    color: black;
+    border-color: black;
+    background-color: rgba(0,0,0,0); }
   .btn-success.active, .btn-success:active,
   .open > .btn-success.dropdown-toggle {
     color: white;
@@ -453,9 +453,9 @@ footer {
     .open > .btn-success.dropdown-toggle.focus,
     .open > .btn-success.dropdown-toggle:focus,
     .open > .btn-success.dropdown-toggle:hover {
-      color: white;
-      border-color: #0a4b3e;
-      background-color: #0e6f5c; }
+      color: grey;
+      border-color: #11866f;
+      background-color: #67dd64; }
   .btn-success.active, .btn-success:active,
   .open > .btn-success.dropdown-toggle {
     background-image: none; }
