--- a/css/bwong.css
+++ b/css/bwong.css
@@ -5,10 +5,12 @@
 	justify-content: center;
 	flex-wrap: wrap;
 	list-style: none;
+	margin-right: 7rem;
 }
 
 .skill-logo {
 	height: 5rem;
 	width: auto;
 	opacity: 0.7;
+	margin-left:4rem;
 }
