--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -48,7 +48,8 @@ hr.star-primary:after {
   top: -.8em;
   display: inline-block;
   padding: 0 0.25em;
-  content: '\f005'; }
+  content: '\f005'; 
+}
 
 hr.star-light {
   border-color: white; }
@@ -357,7 +358,8 @@ header.masthead {
     transition: top 0.3s ease, opacity 0.3s ease;
     vertical-align: middle;
     vertical-align: baseline;
-    opacity: 0; }
+    opacity: 0;
+  }
   .floating-label-form-group:not(:first-child) {
     padding-left: 14px;
     border-left: 1px solid #eeeeee; }
@@ -439,7 +441,7 @@ footer {
   font-weight: 700;
   color: white;
   border-color: #B6CDB1;
-  background-color: #B6CDB1; }
+  background-color: #2f6841; }
   .btn-success.focus, .btn-success:focus {
     color: white;
     border-color: white;
