--- a/css/bwong.css
+++ b/css/bwong.css
@@ -11,8 +11,13 @@
 .skill-logo {
 	height: 5rem;
 	width: auto;
-	opacity: 0.7;
+	opacity: 0.5;
 	margin-left:4rem;
+	-webkit-transition: opacity 0.5s;
+	transition: opacity 0.5s;
+}
+.skill-logo:hover {
+	opacity: 1;
 }
 
 .head-section {
