--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -489,3 +489,24 @@ footer {
 .btn:active,
 .btn:focus {
   outline: none; }
+
+.badge {
+    display: inline-block;
+    padding: .25em .4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25rem
+}
+.badge-pill {
+    padding-right: .6em;
+    padding-left: .6em;
+    border-radius: 10rem
+}
+.badge-default {
+    background-color: #636c72
+}
