condensed profpic bg

--- a/css/bwong.css
+++ b/css/bwong.css
@@ -24,7 +24,7 @@
 .head-section {
 	text-align: center;
 	color: white;
-	background-image: url('../img/profpic.png');
+	background-image: url('../img/profpic.jpg');
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
