--- a/css/bwong.css
+++ b/css/bwong.css
@@ -32,7 +32,7 @@
 			rgba(255,255,255,1) 90%
 		),
 		url('../img/profpic-front.png'),
-		url('../img/profpic-back.jpg');
+		url('../img/profpic-back2.jpg');
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -45,6 +45,31 @@
 		rgba(0,0,0,0) 100%
 	);*/
 }
+@media (min-width: 768px){
+	.head-section{/*length-wise phone*/
+		background-image:
+			linear-gradient(
+				to bottom,
+				rgba(255,255,255,0) 85%,
+				rgba(255,255,255,1) 90%
+			),
+			url('../img/profpic-front.png'),
+			url('../img/profpic-back.jpg');
+	}
+}
+@media (min-width: 960px){
+	.head-section{/*reg-window*/
+		background-image:
+			linear-gradient(
+				to bottom,
+				rgba(255,255,255,0) 85%,
+				rgba(255,255,255,1) 90%
+			),
+			url('../img/profpic-front.png'),
+			url('../img/profpic-back.jpg');
+	}
+}
+
 .head-section::before{
 	position:absolute;
 	content: '';
