--- a/css/bwong.css
+++ b/css/bwong.css
@@ -37,7 +37,7 @@ ul.skill-icon > li:before{
 	text-align: center;
 	background-color: rgba(0,0,0,0.75);
 	z-index: 1;
-	opacity: 0;
+	opacity: 0.5;
 	-webkit-transition: opacity 0.5s;
 	transition: opacity 0.5s;
 }
@@ -142,6 +142,9 @@ ul.skill-icon:hover li:before{
 		display: block;
 		padding-right: 55px;
 	}
+	ul.skill-icon > li:before{
+		opacity: 0.5;
+	}
 }
 @media (min-width: 960px){
 	.head-section{/*reg-window*/
@@ -168,5 +171,8 @@ ul.skill-icon:hover li:before{
 	}
 	.not-active{
 		font-size: 45pt;
+	}
+	ul.skill-icon > li:before{
+		opacity: 0;
 	}
 }
